--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -28,7 +28,7 @@
 
         <main>
             
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
 
             <section>
                 <div>
@@ -36,141 +36,144 @@
                     <i class="far fa-heart"></i>
                 </div>
 
-                 <!--    ENTRÉES   -->
-                <div class="meal-section">
+                <div class="menu">
 
-                    <p class="meal-section-title">ENTRÉES</p>
-                    <div class="underline"></div>
+                    <!--    ENTRÉES   -->
+                    <div class="meal-section">
 
-                    <div class="meal-list">
+                        <p class="meal-section-title">ENTRÉES</p>
+                        <div class="underline"></div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Fricassée d'escargot</p>
-                                <div class="meal-item-description">
-                                    <p>Au piment d'Espelette</p>
-                                    <p class="price">25€</p>
+                        <div class="meal-list">
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Fricassée d'escargot</p>
+                                    <div class="meal-item-description">
+                                        <p>Au piment d'Espelette</p>
+                                        <p class="price">25€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Foie gras de canard mi-cuit</p>
+                                    <div class="meal-item-description">
+                                        <p>Et ses copeaux de truffe noire</p>
+                                        <p class="price">35€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Oeuf au plat</p>
+                                    <div class="meal-item-description">
+                                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                                        <p class="price">20€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
                         </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Foie gras de canard mi-cuit</p>
-                                <div class="meal-item-description">
-                                    <p>Et ses copeaux de truffe noire</p>
-                                    <p class="price">35€</p>
+                    </div>
+
+                    <!--    PLATS   -->
+                    <div class="meal-section">
+
+                        <p class="meal-section-title">PLATS</p>
+                        <div class="underline"></div>
+
+                        <div class="meal-list">
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Filet de boeuf aux herbes</p>
+                                    <div class="meal-item-description">
+                                        <p>Accompagné de sa ribambelle de légumes</p>
+                                        <p class="price">40€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Parmentier de queue de boeuf</p>
+                                    <div class="meal-item-description">
+                                        <p>À la truffe noire sur sa purée de panais</p>
+                                        <p class="price">35€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Filet de turbot</p>
+                                    <div class="meal-item-description">
+                                        <p>Aux agrumes</p>
+                                        <p class="price">44€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
                         </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Oeuf au plat</p>
-                                <div class="meal-item-description">
-                                    <p>Assaisonné à la truffe sur lit de caviar</p>
-                                    <p class="price">20€</p>
+                    </div>
+
+                    <!--    DESSERTS   -->
+                    <div class="meal-section">
+
+                        <p class="meal-section-title">DESSERTS</p>
+                        <div class="underline"></div>
+
+                        <div class="meal-list">
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Paris-Brest</p>
+                                    <div class="meal-item-description">
+                                        <p>Revisité</p>
+                                        <p class="price">18€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Macaron au chocolat d'exception</p>
+                                    <div class="meal-item-description">
+                                        <p>Et glace à la vanille de Madagascar</p>
+                                        <p class="price">22€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Mousse au chocolat</p>
+                                    <div class="meal-item-description">
+                                        <p>Au piment d'Espelette et à la truffe noire</p>
+                                        <p class="price">23€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
                         </div>
 
                     </div>
 
                 </div>
-
-                <!--    PLATS   -->
-                <div class="meal-section">
-
-                    <p class="meal-section-title">PLATS</p>
-                    <div class="underline"></div>
-
-                    <div class="meal-list">
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Filet de boeuf aux herbes</p>
-                                <div class="meal-item-description">
-                                    <p>Accompagné de sa ribambelle de légumes</p>
-                                    <p class="price">40€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Parmentier de queue de boeuf</p>
-                                <div class="meal-item-description">
-                                    <p>À la truffe noire sur sa purée de panais</p>
-                                    <p class="price">35€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Filet de turbot</p>
-                                <div class="meal-item-description">
-                                    <p>Aux agrumes</p>
-                                    <p class="price">44€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <!--    DESSERTS   -->
-                <div class="meal-section">
-
-                    <p class="meal-section-title">DESSERTS</p>
-                    <div class="underline"></div>
-
-                    <div class="meal-list">
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Paris-Brest</p>
-                                <div class="meal-item-description">
-                                    <p>Revisité</p>
-                                    <p class="price">18€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Macaron au chocolat d'exception</p>
-                                <div class="meal-item-description">
-                                    <p>Et glace à la vanille de Madagascar</p>
-                                    <p class="price">22€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Mousse au chocolat</p>
-                                <div class="meal-item-description">
-                                    <p>Au piment d'Espelette et à la truffe noire</p>
-                                    <p class="price">23€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
-
-                    </div>
-
-                </div>
-
 
                 <button>Commander</button>
 
