--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -28,7 +28,7 @@
 
         <main>
             
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
 
             <section>
 
@@ -37,135 +37,139 @@
                     <i class="far fa-heart"></i>
                 </div>
 
-                 <!--    ENTRÉES   -->
-                <div class="meal-section">
+                <div class="menu">
 
-                    <p class="meal-section-title">ENTRÉES</p>
-                    <div class="underline"></div>
+                    <!--    ENTRÉES   -->
+                    <div class="meal-section">
 
-                    <div class="meal-list">
+                        <p class="meal-section-title">ENTRÉES</p>
+                        <div class="underline"></div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Tartare de thon</p>
-                                <div class="meal-item-description">
-                                    <p>Assaisonné au yuzu</p>
-                                    <p class="price">25€</p>
+                        <div class="meal-list">
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Tartare de thon</p>
+                                    <div class="meal-item-description">
+                                        <p>Assaisonné au yuzu</p>
+                                        <p class="price">25€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Bouchée de homard croustillant</p>
-                                <div class="meal-item-description">
-                                    <p>Et sa farandole de petits légumes</p>
-                                    <p class="price">35€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Bouchée de homard croustillant</p>
+                                    <div class="meal-item-description">
+                                        <p>Et sa farandole de petits légumes</p>
+                                        <p class="price">35€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Velouté de cèpes</p>
-                                <div class="meal-item-description">
-                                    <p>Aux truffes</p>
-                                    <p class="price">20€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Velouté de cèpes</p>
+                                    <div class="meal-item-description">
+                                        <p>Aux truffes</p>
+                                        <p class="price">20€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
 
-                    </div>
-
-                </div>
-
-                <!--    PLATS   -->
-                <div class="meal-section">
-
-                    <p class="meal-section-title">PLATS</p>
-                    <div class="underline"></div>
-
-                    <div class="meal-list">
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Poulet rôti aux herbes de Provence</p>
-                                <div class="meal-item-description">
-                                    <p>Et sa crème de truffe</p>
-                                    <p class="price">40€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Langouste rôtie</p>
-                                <div class="meal-item-description">
-                                    <p>Et ses légumes de saison</p>
-                                    <p class="price">35€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Côte de boeuf Angus</p>
-                                <div class="meal-item-description">
-                                    <p>Et sa purée de panais</p>
-                                    <p class="price">44€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
                         </div>
 
                     </div>
 
-                </div>
+                    <!--    PLATS   -->
+                    <div class="meal-section">
 
-                <!--    DESSERTS   -->
-                <div class="meal-section">
+                        <p class="meal-section-title">PLATS</p>
+                        <div class="underline"></div>
 
-                    <p class="meal-section-title">DESSERTS</p>
-                    <div class="underline"></div>
+                        <div class="meal-list">
 
-                    <div class="meal-list">
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Farandole de desserts</p>
-                                <div class="meal-item-description">
-                                    <p>Du chef</p>
-                                    <p class="price">18€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Poulet rôti aux herbes de Provence</p>
+                                    <div class="meal-item-description">
+                                        <p>Et sa crème de truffe</p>
+                                        <p class="price">40€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Langouste rôtie</p>
+                                    <div class="meal-item-description">
+                                        <p>Et ses légumes de saison</p>
+                                        <p class="price">35€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Côte de boeuf Angus</p>
+                                    <div class="meal-item-description">
+                                        <p>Et sa purée de panais</p>
+                                        <p class="price">44€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
                         </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Crème brulée</p>
-                                <div class="meal-item-description">
-                                    <p>Revisitée</p>
-                                    <p class="price">22€</p>
-                                </div>
-                            </div>
-                            <i class="far fa-check-circle"></i>
-                        </div>
+                    </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Tiramisu</p>
-                                <div class="meal-item-description">
-                                    <p>À la noisette</p>
-                                    <p class="price">23€</p>
+                    <!--    DESSERTS   -->
+                    <div class="meal-section">
+
+                        <p class="meal-section-title">DESSERTS</p>
+                        <div class="underline"></div>
+
+                        <div class="meal-list">
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Farandole de desserts</p>
+                                    <div class="meal-item-description">
+                                        <p>Du chef</p>
+                                        <p class="price">18€</p>
+                                    </div>
                                 </div>
+                                <i class="far fa-check-circle"></i>
                             </div>
-                            <i class="far fa-check-circle"></i>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Crème brulée</p>
+                                    <div class="meal-item-description">
+                                        <p>Revisitée</p>
+                                        <p class="price">22€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Tiramisu</p>
+                                    <div class="meal-item-description">
+                                        <p>À la noisette</p>
+                                        <p class="price">23€</p>
+                                    </div>
+                                </div>
+                                <i class="far fa-check-circle"></i>
+                            </div>
+
                         </div>
 
                     </div>
