--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -37,135 +37,139 @@
                     <i class="far fa-heart"></i>
                 </div>
 
-                <!--    ENTRÉES   -->
-                <div class="meal-section">
+                <div class="menu">
 
-                    <p class="meal-section-title">ENTRÉES</p>
-                    <div class="underline"></div>
+                    <!--    ENTRÉES   -->
+                    <div class="meal-section">
 
-                    <div class="meal-list">
+                        <p class="meal-section-title">ENTRÉES</p>
+                        <div class="underline"></div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Tartare de poulpe acidulé</p>
-                                <div class="meal-item-description">
-                                    <p>Aux zests d'orange</p>
-                                    <p class="price">25€</p>
+                        <div class="meal-list">
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Tartare de poulpe acidulé</p>
+                                    <div class="meal-item-description">
+                                        <p>Aux zests d'orange</p>
+                                        <p class="price">25€</p>
+                                    </div>
                                 </div>
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    
+                        
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Velouté de légumes d'antant</p>
-                                <div class="meal-item-description">
-                                    <p>Carotte, panais, topinambour</p>
-                                    <p class="price">35€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Velouté de légumes d'antant</p>
+                                    <div class="meal-item-description">
+                                        <p>Carotte, panais, topinambour</p>
+                                        <p class="price">35€</p>
+                                    </div>
                                 </div>
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <i class="fas fa-check-circle"></i>
-                        </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Soupe à l'oignon</p>
-                                <div class="meal-item-description">
-                                    <p>Revisitée</p>
-                                    <p class="price">20€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Soupe à l'oignon</p>
+                                    <div class="meal-item-description">
+                                        <p>Revisitée</p>
+                                        <p class="price">20€</p>
+                                    </div>
                                 </div>
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-
-                </div>
-
-                <!--    PLATS   -->
-                <div class="meal-section">
-
-                    <p class="meal-section-title">PLATS</p>
-                    <div class="underline"></div>
-
-                    <div class="meal-list">
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Coquilles Saint-Jacques</p>
-                                <div class="meal-item-description">
-                                    <p>Accompagnées d'une purée de panais</p>
-                                    <p class="price">40€</p>
-                                </div>
-                            </div>
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Magret de canard</p>
-                                <div class="meal-item-description">
-                                    <p>Et parmentier de pommes de terre</p>
-                                    <p class="price">35€</p>
-                                </div>
-                            </div>
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Pigeonneau d’Ille-et-Vilaine</p>
-                                <div class="meal-item-description">
-                                    <p>Sur son lit de gnocchis aux légumes</p>
-                                    <p class="price">44€</p>
-                                </div>
-                            </div>
-                            <i class="fas fa-check-circle"></i>
                         </div>
 
                     </div>
 
-                </div>
+                    <!--    PLATS   -->
+                    <div class="meal-section">
 
-                <!--    DESSERTS   -->
-                <div class="meal-section">
+                        <p class="meal-section-title">PLATS</p>
+                        <div class="underline"></div>
 
-                    <p class="meal-section-title">DESSERTS</p>
-                    <div class="underline"></div>
+                        <div class="meal-list">
 
-                    <div class="meal-list">
-
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Pétales de violettes glacés</p>
-                                <div class="meal-item-description">
-                                    <p>Et purée de noisettes</p>
-                                    <p class="price">18€</p>
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Coquilles Saint-Jacques</p>
+                                    <div class="meal-item-description">
+                                        <p>Accompagnées d'une purée de panais</p>
+                                        <p class="price">40€</p>
+                                    </div>
                                 </div>
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <i class="fas fa-check-circle"></i>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Magret de canard</p>
+                                    <div class="meal-item-description">
+                                        <p>Et parmentier de pommes de terre</p>
+                                        <p class="price">35€</p>
+                                    </div>
+                                </div>
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Pigeonneau d’Ille-et-Vilaine</p>
+                                    <div class="meal-item-description">
+                                        <p>Sur son lit de gnocchis aux légumes</p>
+                                        <p class="price">44€</p>
+                                    </div>
+                                </div>
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+
                         </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Fondant au chocolat</p>
-                                <div class="meal-item-description">
-                                    <p>Revisité</p>
-                                    <p class="price">22€</p>
-                                </div>
-                            </div>
-                            <i class="fas fa-check-circle"></i>
-                        </div>
+                    </div>
 
-                        <div class="meal-item">
-                            <div class="meal-item-container">
-                                <p class="meal-item-title">Millefeuille croustillant</p>
-                                <div class="meal-item-description">
-                                    <p>Myrtilles et pâte d’amande</p>
-                                    <p class="price">23€</p>
+                    <!--    DESSERTS   -->
+                    <div class="meal-section">
+
+                        <p class="meal-section-title">DESSERTS</p>
+                        <div class="underline"></div>
+
+                        <div class="meal-list">
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Pétales de violettes glacés</p>
+                                    <div class="meal-item-description">
+                                        <p>Et purée de noisettes</p>
+                                        <p class="price">18€</p>
+                                    </div>
                                 </div>
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <i class="fas fa-check-circle"></i>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Fondant au chocolat</p>
+                                    <div class="meal-item-description">
+                                        <p>Revisité</p>
+                                        <p class="price">22€</p>
+                                    </div>
+                                </div>
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+
+                            <div class="meal-item">
+                                <div class="meal-item-container">
+                                    <p class="meal-item-title">Millefeuille croustillant</p>
+                                    <div class="meal-item-description">
+                                        <p>Myrtilles et pâte d’amande</p>
+                                        <p class="price">23€</p>
+                                    </div>
+                                </div>
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+
                         </div>
 
                     </div>
