--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -28,7 +28,7 @@
 
         <main>
         
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
 
             <section>
 
@@ -37,7 +37,7 @@
                     <i class="far fa-heart"></i>
                 </div>
 
-                <!--<div class="menu">-->
+                <div class="menu">
 
                     <!--    ENTRÉES   -->
                     <div class="meal-section">
@@ -185,7 +185,7 @@
 
                     </div>
 
-                <!--</div>-->
+                </div>
 
 
                 <button>Commander</button>
