--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -34,7 +34,10 @@
 
                 <div>
                     <h2>À la française</h2>
-                    <i class="far fa-heart"></i>
+                    <button class="heart">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </button>
                 </div>
 
                 <div class="menu">
