--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -34,7 +34,10 @@
 
                 <div>
                     <h2>La note enchantée</h2>
-                    <i class="far fa-heart"></i>
+                    <button class="heart">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </button>
                 </div>
 
                 <div class="menu">
