--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -33,7 +33,10 @@
             <section>
                 <div>
                     <h2>La palette du goût</h2>
-                    <i class="far fa-heart"></i>
+                    <button class="heart">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </button>
                 </div>
 
                 <div class="menu">
