--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -34,7 +34,10 @@
 
                 <div>
                     <h2>Au délice des sens</h2>
-                    <i class="far fa-heart"></i>
+                    <button class="heart">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </button>
                 </div>
 
                 <div class="menu">
