amélioration de l'animation de l'apparition des menus remplacement de position relative et top 30px par un transform translateY(30px)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!--    SECTION INTRODUCTION    -->
         <section>
 
-            <p class="title">Réservez le menu qui vous convient</p>
+            <h2 class="roboto">Réservez le menu qui vous convient</h2>
 
             <p>Découvrez des restaurants d'exception, séléctionnés par nos soin.</p>
 
@@ -51,7 +51,7 @@
         <!--    SECTION FONCTIONNEMENT    -->
         <section>
 
-            <p class="title">Fonctionnement</p>
+            <h2 class="roboto">Fonctionnement</h2>
             <div class="step-container">
 
                 <div class="card step">
@@ -87,7 +87,7 @@
         
         <section>
 
-            <p class="title">Restaurants</p>
+            <h2 class="roboto">Restaurants</h2>
 
             <div class="restaurants-list">
 
