dernières retouches scss. projet terminé

--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -34,7 +34,7 @@
 
                 <div>
                     <h2>La note enchantée</h2>
-                    <button class="heart">
+                    <button class="heart heart--big">
                         <i class="far fa-heart"></i>
                         <i class="fas fa-heart"></i>
                     </button>
