--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -33,7 +33,7 @@
             <section>
                 <div>
                     <h2>La palette du goût</h2>
-                    <button class="heart">
+                    <button class="heart heart--big">
                         <i class="far fa-heart"></i>
                         <i class="fas fa-heart"></i>
                     </button>
