--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -34,7 +34,7 @@
 
                 <div>
                     <h2>Au délice des sens</h2>
-                    <button class="heart">
+                    <button class="heart heart--big">
                         <i class="far fa-heart"></i>
                         <i class="fas fa-heart"></i>
                     </button>
