modification des url du à la modification du nom du repository

--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -18,7 +18,7 @@
 
         <header>           
             <nav>
-                <a href="/OC-P3/" title="revenir à la page d'accueil">
+                <a href="/ChristopheMichel_3_28112021/" title="revenir à la page d'accueil">
                     <i class="fas fa-arrow-left"></i>
                 </a>
             </nav>
