--- a/menus/a_la_francaise.html
+++ b/menus/a_la_francaise.html
@@ -10,8 +10,8 @@
         restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte
         !">   
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles/css/normalize.css">
-        <link rel="stylesheet" href="styles/css/menu.css">
+        <link rel="stylesheet" href="/styles/css/normalize.css">
+        <link rel="stylesheet" href="/styles/css/menu.css">
     </head>
 
     <body>
