--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="restaurants-list">
 
                 <div class="card restaurant">
-                    <a href="/menus/la_palette_du_gout.html" title="voir le menu du restaurant La palette du goût">
+                    <a href="./menus/la_palette_du_gout.html" title="voir le menu du restaurant La palette du goût">
                         <p class="restaurant--new">Nouveau</p>
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant La palette du goût">
                         <div class="restaurant-description">
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="card restaurant">
-                    <a href="/menus/la_note_enchantee.html" title="voir le menu du restaurant La note enchantée">
+                    <a href="./menus/la_note_enchantee.html" title="voir le menu du restaurant La note enchantée">
                         <p class="restaurant--new">Nouveau</p>
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat du restaurant La note enchantée">
                         <div class="restaurant-description">
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="card restaurant">
-                    <a href="/menus/a_la_francaise.html" title="voir le menu du restaurant À la française">
+                    <a href="./menus/a_la_francaise.html" title="voir le menu du restaurant À la française">
                         
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
                         <div class="restaurant-description">
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="card restaurant">
-                    <a href="/menus/le_delice_des_sens.html" title="voir le menu du restaurant À la française">
+                    <a href="../menus/le_delice_des_sens.html" title="voir le menu du restaurant À la française">
                         
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant Le délice des sens">
                         <div class="restaurant-description">
