modifications des url des images dans les pages menu

--- a/menus/a_la_francaise.html
+++ b/menus/a_la_francaise.html
@@ -28,7 +28,7 @@
 
         <main>
             
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
+            <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
 
             <section>
 
