--- a/menus/le_delice_des_sens.html
+++ b/menus/le_delice_des_sens.html
@@ -18,7 +18,7 @@
 
         <header>        
             <nav>
-                <a href="/" title="revenir à la page d'accueil">
+                <a href="./" title="revenir à la page d'accueil">
                     <i class="fas fa-arrow-left"></i>
                 </a>
             </nav>
@@ -28,7 +28,7 @@
 
         <main>
             
-            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
+            <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
 
             <section>
 
