--- a/menus/la_note_enchantee.html
+++ b/menus/la_note_enchantee.html
@@ -28,7 +28,7 @@
 
         <main>
         
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
+            <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
 
             <section>
 
