--- a/menus/la_palette_du_gout.html
+++ b/menus/la_palette_du_gout.html
@@ -28,7 +28,7 @@
 
         <main>
             
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
+            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
 
             <section>
                 <div>
