--- a/menus/a_la_francaise.html
+++ b/menus/a_la_francaise.html
@@ -18,7 +18,7 @@
 
         <header>            
             <nav>
-                <a href="/" title="revenir à la page d'accueil">
+                <a href="../" title="revenir à la page d'accueil">
                     <i class="fas fa-arrow-left"></i>
                 </a>
             </nav>
