--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="card restaurant">
-                    <a href="../menus/le_delice_des_sens.html" title="voir le menu du restaurant À la française">
+                    <a href="./menus/le_delice_des_sens.html" title="voir le menu du restaurant À la française">
                         
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant Le délice des sens">
                         <div class="restaurant-description">
